# 3d-belief

./: .gitignore  .gitmodules  GEN3C.md  LICENSE  README.md  RESULTS.md  TRAINING.md  pyproject.toml  requirements.txt
3d_belief/config/: config.yaml  sp_reason.yaml  vggt_agent.yaml
3d_belief/data_io/: __init__.py  dl3dv.py  dl3dv_video.py  hm3d.py  hm3d_seq.py  realestate.py  realestate_seq.py  spoc.py  spoc_seq.py  spoc_video.py
3d_belief/diffusion/: diffusion.py  diffusion_temporal.py
3d_belief/embodied/: semantic_mapper.py
3d_belief/experiment/: temporal_inference.py  train.py
3d_belief/splat/: __init__.py  layers.py  splat_belief.py  splat_belief_state.py
3d_belief/utils/: model_utils.py
3dwm_baselines/agent/: base_agent.py  obj_comp_reasoning_agent.py  room_comp_reasoning_agent.py  vlm_agent.py
3dwm_baselines/config/: spoc_obj_permanence_3d_belief_workspace.yaml  spoc_obj_searching_3d_belief_gemini_vlm_goal_selector_workspace.yaml  spoc_obj_searching_3d_belief_no_imagination_vlm_goal_selector_workspace.yaml  spoc_obj_searching_3d_belief_semantic_goal_selector_workspace.yaml  spoc_obj_searching_3d_belief_vlm_goal_selector_workspace.yaml  spoc_obj_searching_nwm_gemini_vggt_vlm_goal_selector_workspace.yaml  spoc_obj_searching_nwm_vggt_vlm_goal_selector_workspace.yaml  spoc_room_completion_dfot_vggt_workspace.yaml  stretch_obj_searching_3d_belief_frontier_workspace.yaml  stretch_obj_searching_3d_belief_gemini_vlm_goal_selector_workspace.yaml  (+2 more)
scripts/: visualize_bboxes.py
scripts/inference/: validate.sh  (+3 more)
uv_venv/: pyproject.toml
wandb/: latest-run
(+408 files in other folders)
