[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3D-Belief"
version = "0.1.0"
description = "A Generative 3D World Model for Embodied Reasoning and Planning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["splat_belief*", "wm_baselines*"]

[tool.uv.workspace]
members = [
    "uv_venv",
]
